# deep-agent-project

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  reproduce_issue.py
.claude/: settings.local.json
config/: agents.yaml
docs/: 1.审核员模块需求.md  10_运行指南.md  11.0_通用软件文档生成系统演变设计.md  11.1_多Agent提示词完整示例.md  11.2_多Agent技能完整示例.md  11.3_通用软件文档Spec完整示例.md  11.4_通用软件文档Template完整示例.md  2_概要设计文档.md  3.1_Writer主动标记触发HIL仲裁.md  3_需求澄清与人机协作扩展设计.md  4.1_技术文档修订链路优化建议.md  4_LLM_Provider扩展设计_DeepSeek原生_Kimi兼容.md  5_双阶段审核架构设计.md  6.1_context7_mcp集成.md  6.2_tavily_tools集成.md  6_MCP工具集成设计.md  7.1_reviewer2受限能力终审模式设计.md  7_两阶段写作_目录优先模式设计.md  8_OpenRouter适配增强设计.md
input/: sas代码的数据血缘分析需求.md
output/: SAS数据血缘分析工具设计文档_20260326-014052.md  SAS数据血缘分析模块技术设计文档_20260328-220627.md  SAS数据血缘分析模块技术设计文档_20260329-003942.md  SAS数据血缘分析系统技术设计文档_20260326-084332.md  SAS数据血缘分析系统技术设计文档_20260326-104110.md  SAS数据血缘分析系统技术设计文档_20260327-081816.md  SAS数据血缘分析系统技术设计文档_20260328-022750.md  SAS数据血缘分析系统技术设计文档_20260328-150109.md  SAS数据血缘分析系统技术设计文档_20260328-210836.md  SAS数据血缘分析系统设计文档_20260326-070308.md  SAS数据血缘分析系统设计文档_20260326-075017.md  SAS数据血缘分析系统设计文档_20260327-025648.md  SAS数据血缘分析系统设计文档_20260327-073330.md  SAS数据血缘分析系统设计文档_20260327-113241.md  SAS数据血缘分析设计.md  SAS数据血缘分析设计_20260325-234930.md  SAS数据血缘分析设计_20260326-010259.md  design.md
src/: agent_factory.py  config_loader.py  logger.py  model_factory.py  openrouter_compat.py  reasoning_compat.py  rich_console.py
tests/: conftest.py  manual_openrouter_test.py  minimal_openrouter_test.py  raw_http_openrouter_test.py  smoke_glm5_thinking.py  test_config_loader.py  (+16 more)
(+27 files in other folders)
